--- a/clusters/my-cluster/mongo/ingress.yaml
+++ b/clusters/my-cluster/mongo/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: name
+  namespace: mongo
   annotations:
     kubernetes.io/ingress.class: "nginx"
 spec:
